[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation3.png" type="Texture" id=1]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation1.png" type="Texture" id=2]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation2.png" type="Texture" id=3]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation4.png" type="Texture" id=4]
[ext_resource path="res://assets/Lights/Radial_Gradient_Transparent.png" type="Texture" id=5]
[ext_resource path="res://scripts/Campfire/Campfire.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.8598

[sub_resource type="Animation" id=3]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.85, 1.0, 0.9, 0.9, 1.0, 0.8, 0.9, 1.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51.4724, 47.5764 )

[node name="Campfire" type="StaticBody2D"]
script = ExtResource( 6 )

[node name="CampfireSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.707108, 13.9142 )
shape = SubResource( 2 )

[node name="FireLight" type="Light2D" parent="."]
position = Vector2( 1, 14 )
texture = ExtResource( 5 )
texture_scale = 0.2
color = Color( 0.760784, 0.47451, 0.0666667, 1 )
energy = 1.15
range_layer_max = 3
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1
__meta__ = {
"_editor_description_": ""
}

[node name="CampfireFlicker" type="AnimationPlayer" parent="FireLight"]
anims/Flicker = SubResource( 3 )

[node name="LightDetect" type="Area2D" parent="FireLight"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireLight/LightDetect"]
shape = SubResource( 4 )
[connection signal="body_entered" from="FireLight/LightDetect" to="." method="_on_LightDetect_body_entered"]
[connection signal="body_exited" from="FireLight/LightDetect" to="." method="_on_LightDetect_body_exited"]
